Bug 155035 - can't click on menu item File or Edit
Summary: can't click on menu item File or Edit
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-03 17:25 UTC by sts
Modified: 2008-01-25 01:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sts 2008-01-03 17:25:45 UTC
Version:           2.0.0 (using KDE 3.97.2 (KDE 4.0 >= 20080101) "release 2.1", compiled sources)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.22.13-0.3-default

See attachment I can't click on 'Datei' and 'Bearbeiten' only behind the 't'. All other menu items works fine.. crazy.. :)

maybe a general prob and not an umbrello prob?
Comment 1 Rafael Fernández López 2008-01-25 01:35:15 UTC
SVN commit 765994 by ereslibre:

The stacked widget was created twice. That means that one was added 
nowhere, and therefore flying nowhere. When you were trying to click on 
File menu, or Edit menu, you were actually, clicking on the stacked 
widget.

BUG: 155035


 M  +0 -3      uml.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=765994