The stacked widget was created twice. That means that one was added nowhere, and therefore flying nowhere. When you were trying to click on File menu, or Edit menu, you were actually, clicking on the stacked widget.

BUG: 155035

svn path=/trunk/KDE/kdesdk/umbrello/; revision=765994